crates/pgls_pretty_print/tests/snapshots/multi/tests__20240705083738_remove_contact_email_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/20240705083738_remove_contact_email.sql
---
drop view if exists public.accounts;

create view public.accounts
  with (security_invoker = 'true')
as select
  acc.id,
  acc.handle,
  obj.name as avatar_path,
  acc.display_name,
  acc.bio,
  acc.created_at
from
  app.accounts as acc
  left outer join
    storage.objects as obj
  on acc.avatar_id = obj.id;

drop view if exists public.organizations;

create view public.organizations
  with (security_invoker = 'true')
as select
  org.id,
  org.handle,
  obj.name as avatar_path,
  org.display_name,
  org.bio,
  org.created_at
from
  app.organizations as org
  left outer join
    storage.objects as obj
  on org.avatar_id = obj.id;
