crates/pgls_pretty_print/tests/snapshots/multi/tests__20250804111152_remove_dbdev_from_popular_packages_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/20250804111152_remove_dbdev_from_popular_packages.sql
---
create or replace function public.popular_packages()
returns setof public.packages
language sql
stable
as $function$
select * from public.packages p
  where p.package_name != 'supabase-dbdev'
  order by (
    select (dm.downloads_30_day * 5) + (dm.downloads_90_days * 2) + dm.downloads_180_days
    from public.download_metrics dm
    where dm.package_id = p.id
  ) desc nulls last, p.created_at desc;
$function$;
